# mail2json-web

./: Cargo.toml  README.md  index.html  package-lock.json
pkg/: README.md  mail2json_web_gui.d.ts  mail2json_web_gui.js  mail2json_web_gui_bg.wasm  mail2json_web_gui_bg.wasm.d.ts  package.json
src/: lib.rs
