[package]
name = "mail2json-web-gui"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann@esrlabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

getrandom = { version = "0.2.3", features = ["js"] }
mail-parser = "0.3.0"
serde_json = "1.0.72"
wasm-bindgen = "0.2.78"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
